fix: Address the review of the chat notification eXip in the read anchor EXO-90137